# cookiecutter-cython-template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: wheel.yml
{{cookiecutter.project_slug}}/docs/: index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  {{cookiecutter.module_name}}.pyx
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}_basic.py
