[build-system]
requires = [
    "scikit-build-core[pyproject]",
    "cython",
    "cython-cmake",
]
build-backend = "scikit_build_core.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.package_description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
readme = "README.md"
license = {text = "{{ cookiecutter.license }}"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = "{{ cookiecutter.python_version }}"
dependencies = [
    "numpy>=1.20",
    "click>=8.0",
]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.module_name }}.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.urls]
"Homepage" = "{{ cookiecutter.project_url }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/issues"
"Document" = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.repo_name }}"


[tool.setuptools.package-dir]
{{ cookiecutter.module_name }} = "src/{{ cookiecutter.module_name }}"

[tool.scikit-build.cmake]
version = ">=3.15"
build-type = "Release"

[tool.scikit-build]
sdist.include = [
    "src/third_party/curl/**/*"
]


[tool.cibuildwheel]
skip = "*i686*"
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.cibuildwheel.linux]
repair-wheel-command = "cp {wheel} {dest_dir}/"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3